migrate from jjwt to nimbus-jose-jwt for jwt token support (#2707)
Signed-off-by: Henry Avetisyan <hga@yahooinc.com>